--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@ title: Lifesum Engineering
        	 		{% endif %}
    	 		{% endif %}
 
+        <a href="{{ post.url }}#disqus_thread">Link</a>.
+
    	 	</span>
        	 {{ post.content }}
+
   		</li>
     {% endfor %}
   </ul>
